# AoC2024

./: CMakeLists.txt
include/: day1.h  day2.h
src/: main.cpp
